--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
             <li><a >|</a></li>
             <li><a href="addPost.html" class="nav-item">addPost</a></li>
         </ul>
-        <a class="logo" href="login.html"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
+        <div class="profile-container">
+            <img src="res/images/me.png" width="50" height="50" alt="My picture" class="profile-picture">
+        </div>
+        <div class="dropdown-menu" id="dropdown-menu">
+             <p class="user-name">John Doe</p>
+             <p class="user-email">john.doe@ut.ee</p>
+             <a href="login.html" class="logout-button">Logout</a>
+         </div>
     </header>
     
 
